crates/jrsonnet-peg-parser/src/snapshots/jrsonnet_peg_parser__tests__double_negation.snap
---
source: crates/jrsonnet-peg-parser/src/lib.rs
expression: "parsep(\"!!a\")"
---
UnaryOp(
    Not,
    UnaryOp(
        Not,
        Var(
            "a",
        ) from virtual:<test>:2-3,
    ) from virtual:<test>:1-3,
) from virtual:<test>:0-3
