crates/jrsonnet-peg-parser/src/snapshots/jrsonnet_peg_parser__tests__multiline_string.snap
---
source: crates/jrsonnet-peg-parser/src/lib.rs
expression: "parsep(\"|||\\n    Hello world!\\n     a\\n|||\")"
---
Str(
    "Hello world!\n a\n",
) from virtual:<test>:0-31
