crates/jrsonnet-peg-parser/src/snapshots/jrsonnet_peg_parser__tests__multiple_args_buf.snap
---
source: crates/jrsonnet-peg-parser/src/lib.rs
expression: "parsep(\"a(b, null_fields)\")"
---
Apply(
    Var(
        "a",
    ) from virtual:<test>:0-1,
    ArgsDesc {
        unnamed: [
            Var(
                "b",
            ) from virtual:<test>:2-3,
            Var(
                "null_fields",
            ) from virtual:<test>:5-16,
        ],
        named: [],
    },
    false,
) from virtual:<test>:0-17
